<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetailActivity">

    <ImageView
        android:id="@+id/meal_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blank_image" />

    <TextView
        android:id="@+id/meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Burger King"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_image" />

    <View
        android:id="@+id/view"
        android:layout_width="48dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="#00897B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_name" />

    <TextView
        android:id="@+id/meal_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="This is the best buger in the world"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0C00897B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/addToBasket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#00897B"
            android:text="Add to basket"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/meal_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:text="£12.00"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/meal_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="1."
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/meal_name"
        app:layout_constraintTop_toBottomOf="@+id/meal_image" />

    <TextView
        android:id="@+id/meal_ingredients"
        android:layout_width="358dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="Bread, butter, cheese, tomato"
        android:textSize="18dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>